--- a/ichrisbirch/app/static/sass/layout/_grid.scss
+++ b/ichrisbirch/app/static/sass/layout/_grid.scss
@@ -29,12 +29,6 @@
                 inset -10px -10px 10px var(--clr-black-trans-200),
                 16px 8px 16px var(--clr-black-trans-800),
                 0px 16px 16px var(--clr-black-trans-800);
-
-            &:last-child:nth-child(odd) {
-                grid-column: 1 / span 2;
-                justify-self: center;
-                width: calc(50% - (var(--grid-gap) * 4));
-            }
         }
     }
 
